[tool.poetry]
name = "character_frequency_analysis.git"
version = "0.1.0"
description = ""
authors = ["Chaitanya Sharma"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
plotext = "^5.0.2"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venv=".venv"
